[metadata]
name = flask_was
url = https://github.com/isclub/flask-was
project_urls =
    Documentation = https://github.com/isclub/flask-was/blob/main/docs/
    Code = https://github.com/isclub/flask-was
    Issue tracker = https://github.com/isclub/flask-was/issues
license = MIT
author = Ceorleorn
author_email = snbck@qq.com
maintainer = IsClub
maintainer_email = support@isclub.club
description = The API extension of the flask is very comfortable and good
long_description = file: README.md
long_description_content_type = text/markdown
