[metadata]
name = flask-was
url = https://github.com/isclub/flask-was
project_urls =
    Documentation = https://github.com/isclub/flask-was/blob/main/docs/
    Code = https://github.com/isclub/flask-was
    Issue tracker = https://github.com/isclub/flask-was/issues
license = MIT
author = Ceorleorn
author_email = snbck@qq.com
maintainer = IsClub
maintainer_email = support@isclub.club
description = 🍾 Flask extension for JSON API
long_description = file: README.md
long_description_content_type = text/markdown
